<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Name Database</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="fullname">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="unknown">Unknown</string>
    <string name="colon">: </string>
    <string name="favmeal">Favorite Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
