<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="8dip"
  android:paddingRight="8dip"
>
  
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"
      android:text="@string/firstname" />
    <EditText
      android:id="@+id/firstname_text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"
      android:text="@string/lastname" />
    <EditText
      android:id="@+id/lastname_text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
   
  </LinearLayout>

  <Spinner
      android:id="@+id/genderSpinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/gender" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <CheckBox
          android:id="@+id/breakfast_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/breakfast"  />

      <CheckBox
          android:id="@+id/lunch_label"
          android:layout_width="90dp"
          android:layout_height="wrap_content"
          android:text="@string/lunch"  />

      <CheckBox
          android:id="@+id/dinner_label"
          android:layout_width="90dp"
          android:layout_height="wrap_content"
          android:text="@string/dinner"  />
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >

      <Button
          android:id="@+id/ok_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ok" />

      <Button
          android:id="@+id/clear_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/clear" />
  </LinearLayout>

</LinearLayout>
